--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,16 @@ lint = [
     "ruff>=0.0.265",
     "black>=23.3.0",
 ]
+docs = [
+  'furo >= 2021.08.31',
+  'sphinx ~= 4.0',
+  'sphinx-contributors >= 0.2.2',
+  'sphinx-copybutton >= 0.5.0',
+  'sphinx-design >= 0.1.0',
+  'sphinx-autobuild',
+  'sphinxcontrib-spelling >= 7.0.0',
+  'sphinxext-opengraph >= 0.7.0',
+]
 [build-system]
 requires = ["pdm-backend"]
 build-backend = "pdm.backend"
