--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,18 +23,19 @@ license = { text = "MIT" }
 
 [tool.pdm.dev-dependencies]
 lint = [
-    "ruff>=0.0.265",
-    "black>=23.3.0",
+    "ruff",
+    "black",
 ]
 docs = [
-  'furo >= 2021.08.31',
-  'sphinx ~= 4.0',
-  'sphinx-contributors >= 0.2.2',
-  'sphinx-copybutton >= 0.5.0',
-  'sphinx-design >= 0.1.0',
-  'sphinx-autobuild',
-  'sphinxcontrib-spelling >= 7.0.0',
-  'sphinxext-opengraph >= 0.7.0',
+    'furo',
+    'sphinx',
+    'sphinx-contributors',
+    'sphinx-copybutton',
+    'sphinx-design',
+    'sphinx-autobuild',
+    'sphinxcontrib-spelling',
+    "myst-parser>=2",
+    "sphinx-autodoc2>=0.4.2",
 ]
 [build-system]
 requires = ["pdm-backend"]
