--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,5 +1,7 @@
 name: Build documentation
 on: [push, pull_request]
+permissions:
+  contents: write
 jobs:
   build_docs:
     name: Build documentation
@@ -22,4 +24,3 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           enable_jekyll: false # No jekyll processing needed
           publish_dir: ./docs/build/html
-          keep_files: true
