--- a/.github/workflows/pre_commit.yml
+++ b/.github/workflows/pre_commit.yml
@@ -14,3 +14,10 @@ jobs:
       with:
         python-version: '3.9'
     - uses: pre-commit/action@v2.0.3
+  call-asv-test:
+    needs: pre-commit
+    uses: ./.github/workflows/trigger_asv.yml
+    with:
+      pr-number: "${{ github.event.pull_request.number }}"
+    secrets:
+      asv_tok: ${{ secrets.ASV_TOK }}
