--- a/.github/workflows/trigger_asv.yml
+++ b/.github/workflows/trigger_asv.yml
@@ -1,18 +1,20 @@
 name: Trigger asv
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_call:
+    inputs:
+      pr-number:
+        required: true
+        type: number
+    secrets:
+      asv_tok:
+        required: true
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
-  buildmamba:
+  triggerasv:
     runs-on: ${{ matrix.config.os }}
     name: ${{ matrix.config.os }}
     strategy:
@@ -25,12 +27,17 @@ jobs:
         with:
           submodules: "recursive"
           fetch-depth: 0
-      - uses: convictional/trigger-workflow-and-wait@v1.6.5
-        with:
-          owner: airspeed-velocity
-          repo: asv
-          github_token: ${{ secrets.ASV_TOK }}
-          workflow_file_name: triggered.yml
-          ref: master
-          wait_workflow: true
-          client_payload: '{"pr_number": "${{ github.event.pull_request.number }}"}'
+      - run: |
+          gh workflow run workflow.yml -R airspeed-velocity/asv --json '{"pr_number": "$PR_NUM"}'
+        env:
+          GH_TOKEN: ${{ secrets.asv_tok }}
+          PR_NUM: ${{ inputs.pr-number }}
+      # - uses: convictional/trigger-workflow-and-wait@v1.6.5
+      #   with:
+      #     owner: airspeed-velocity
+      #     repo: asv
+      #     github_token: ${{ secrets.asv_tok }}
+      #     workflow_file_name: triggered.yml
+      #     ref: master
+      #     wait_workflow: true
+      #     client_payload: '{"pr_number": "${{ inputs.pr-number }}"}'
