CI: Update slashdot_trigger.yml

--- a/.github/workflows/slashdot_trigger.yml
+++ b/.github/workflows/slashdot_trigger.yml
@@ -12,3 +12,4 @@ jobs:
           token: ${{ secrets.ASV_TOK }}
           commands: |
             trigger-asv
+          client-payload: '{"pr_number": "${{ github.event.issue.number }}"}'
