--- a/.github/workflows/slashdot_trigger.yml
+++ b/.github/workflows/slashdot_trigger.yml
@@ -12,4 +12,4 @@ jobs:
           token: ${{ secrets.ASV_TOK }}
           commands: |
             trigger-asv
-          client-payload: '{"pr_number": "${{ github.event.issue.number }}"}'
+          client-payload: '{"pr_number": "${{ github.event.pull_request.number }}"}'
