CI: Trigger with the correct arguments

--- a/.github/workflows/trigger_asv.yml
+++ b/.github/workflows/trigger_asv.yml
@@ -29,4 +29,5 @@ jobs:
           workflow_file_name: triggered.yml
           ref: master
           wait_workflow: true
-          client_payload: '{"pr_number": "${{ github.event.pull_request.number }}"}'
+          client_payload: '{"pr_number": "${{ github.event.client_payload.slash_command.args.named.pr_number }}"}'
+
