--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
 ]
 version = "0.0.7"
 dependencies = [] # Make sure there's nothing here
-requires-python = ">=3.8"
+requires-python = ">=3.7"
 readme = "README.md"
 license = {text = "BSD-3-Clause"}
 
@@ -31,8 +31,8 @@ docs = [
     'sphinx-design',
     'sphinx-autobuild',
     'sphinxcontrib-spelling',
-    "myst-parser>=2",
-    "sphinx-autodoc2>=0.4.2",
+    "myst-parser>=2", # Needs python >= 3.8
+    "sphinx-autodoc2>=0.4.2", # Needs python >= 3.8
 ]
 [tool.pdm.dev-dependencies]
 lint = [
