--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,3 @@
-[tool.pdm]
-
 [project]
 name = "asv_runner"
 description = "Core Python benchmark code for ASV"
@@ -11,33 +9,36 @@ maintainers = [
     { name = "Rohit Goswami", email = "rog32@hi.is" },
 ]
 classifiers = [
-  'Development Status :: 4 - Beta',
-  'Programming Language :: Python',
-  'License :: OSI Approved :: BSD License',
-  'Topic :: System :: Benchmark',
+  "Development Status :: 4 - Beta",
+  "Programming Language :: Python",
+  "License :: OSI Approved :: BSD License",
+  "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3 :: Only",
+  "Programming Language :: Python :: 3.7",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Topic :: System :: Benchmark",
 ]
-version = "0.1.0"
-dependencies = [] # Make sure there's nothing here
+dependencies = [] # Make sure there"s nothing here
 requires-python = ">=3.7"
 readme = "README.md"
 license = {text = "BSD-3-Clause"}
+dynamic = ["version"]
 
 [project.optional-dependencies]
 docs = [
-    'furo',
-    'sphinx',
-    'sphinx-contributors',
-    'sphinx-copybutton',
-    'sphinx-design',
-    'sphinx-autobuild',
-    'sphinxcontrib-spelling',
-    "myst-parser>=2", # Needs python >= 3.8
-    "sphinx-autodoc2>=0.4.2", # Needs python >= 3.8
-]
-[tool.pdm.dev-dependencies]
-lint = [
-    "ruff",
-    "black",
+    "furo",
+    "sphinx",
+    "sphinx-contributors",
+    "sphinx-copybutton",
+    "sphinx-design",
+    "sphinx-autobuild",
+    "sphinxcontrib-spelling",
+    "myst-parser>=2", # Needs py38
+    "sphinx-autodoc2>=0.4.2", # Needs py38
 ]
 [build-system]
 requires = ["pdm-backend"]
@@ -46,7 +47,7 @@ build-backend = "pdm.backend"
 [tool.ruff]
 line-length = 88
 extend-ignore = [
-    "E741", # Do not use variables named 'I', 'O', or 'l'
+    "E741", # Do not use variables named "I", "O", or "l"
 ]
 select = [
   "E",   # pycodestyle
@@ -55,16 +56,22 @@ select = [
   "I001", # isort
 ]
 
-[tool.black]
-line-length = 88
-target-version = ['py37']
-
-[tool.setuptools_scm]
-write_to = "asv_runner/_version.py"
+[tool.pdm]
+[tool.pdm.dev-dependencies]
+base = [
+    "towncrier>=23.6.0",
+    "tbump>=6.11.0",
+    "ruff>=0.2.1",
+]
 
 [tool.pdm.scripts]
-lint = {composite = ["ruff --fix asv_runner/", "black asv_runner/"]}
+lint = {composite = ["ruff --fix --unsafe-fixes asv_runner/", "ruff format asv_runner/"]}
 mkdoc = {composite = ["sphinx-build -b html docs/source docs/build/html"]}
+
+[tool.pdm.version]
+source = "scm"
+write_to = "asv_runner/_version.py"
+write_template = "__version__ = '{}'"
 
 [project.urls]
 homepage = "https://asv.readthedocs.io/projects/asv-runner/en/latest/"
