--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,9 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
   "Topic :: System :: Benchmark",
 ]
-dependencies = [] # Make sure there"s nothing here
+dependencies = [
+    "importlib-metadata", # This is OK, it was vendored from 3.8
+] # Make sure there's nothing (or almost nothing) here
 requires-python = ">=3.7"
 readme = "README.md"
 license = {text = "BSD-3-Clause"}
